--- a/styles.css
+++ b/styles.css
@@ -86,12 +86,21 @@ footer {
   }
 }
 
-
-@media (max-width: 600px) {
+@media (max-width: 1800px) and (min-width: 1400px)  {
 
   .btn-play {
 
-    left: 22%;
+      top: 2rem;
+      left: 42.2%;
+  }
+}
+
+
+@media (max-width: 700px) {
+
+  .btn-play {
+
+    left: 30%;
   }
 
 }
