--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ img {
   display: block;
   position: relative;
   top: 2rem;
-  left: 33%;
+  left: 42%;
   background: #3498db;
   background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
   background-image: -moz-linear-gradient(top, #3498db, #2980b9);
@@ -65,8 +65,6 @@ img {
   text-decoration: none;
 }
 
-
-
 footer {
   margin-top: 10%;
   color: #EEEEEE;
@@ -75,32 +73,42 @@ footer {
 }
 
 
+/* Animation */
+
+/* rolling animation */
+@keyframes rollAnimation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.roll {
+  animation-name: rollAnimation;
+  animation-duration: 1s;
+  animation-timing-function: linear;
+  animation-iteration-count: 1;
+}
+
+
+
 /* Responsive Button  */
 
-@media (min-width: 1200px) {
-
+@media (min-width: 700px) and (max-width: 1600px) {
   .btn-play {
-
-      top: 1rem;
-      left: 39.2%;
+    left: 36.5%;
   }
 }
 
-@media (max-width: 1800px) and (min-width: 1400px)  {
-
-  .btn-play {
-
-      top: 2rem;
-      left: 42.2%;
-  }
-}
 
 
 @media (max-width: 700px) {
 
   .btn-play {
 
-    left: 22.5%;
+    left: 36.5%;
   }
 
-}
+} 
